--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
       <artifactId>pmd-core</artifactId>
       <version>1.0.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-junit5</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <profiles>
