add ollama integration for AI recommendations into fixing violations

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,24 @@ BITBUCKET_TOKEN=YOUR_BITBUCKET_TOKEN_HERE
 # Base URL of your Bitbucket Server (without trailing slash)
 BITBUCKET_URL=https://bitbucket.example.com
 
+# === Ollama Configuration ===
+
+# Base URL of your locally running Ollama instance
+OLLAMA_API_URL=http://ollama.host:11434
+
+# Model to use for AI recommendations
+OLLAMA_MODEL=deepseek-coder:6.7b
+
+# AI temperature: controls randomness (0.0 = deterministic, 1.0 = creative)
+OLLAMA_TEMPERATURE=0.2
+
+# Path to the prompt template used to generate AI requests
+OLLAMA_PROMPT_PATH=prompt-template.txt
+
+# API timeout settings (in milliseconds)
+OLLAMA_CONNECT_TIMEOUT=5000
+OLLAMA_READ_TIMEOUT=60000
+
 # === PMD Configuration ===
 
 # Absolute path to the PMD executable
